--- a/src/components/MenuElement.astro
+++ b/src/components/MenuElement.astro
@@ -64,7 +64,7 @@
     <a class="btn btn-ghost hover:text-gray-500 text-base font-normal" id="opeds" href="/opeds/">Op-Eds</a>
     <a class="btn btn-ghost hover:text-gray-500 text-base font-normal" id="98 Acres" href="/98 Acres/">98 Acres</a>
     <a class="btn btn-ghost hover:text-gray-500 text-base font-normal" id="sports" href="/Sports/">Sports and Games</a>
-    <a class="btn btn-ghost hover:text-gray-500 text-base font-normal" id="publications" href="/publications/">Publications</a>
+    <a class="btn btn-ghost hover:text-gray-500 text-base font-normal" id="publications" href="/magazine/">Kalpa Editions</a>
     <a class="btn btn-ghost hover:text-gray-500 text-base font-normal" id="arts" href="/arts/">Arts and Culture</a>
     <a href="/contact" class="btn btn-ghost hover:text-gray-500 text-base font-normal">Contact</a></li>
 </nav>
@@ -87,7 +87,7 @@
     <a class="btn btn-ghost hover:text-gray-500 text-base font-normal" id="opeds" href="/opeds/">Op-Eds</a>
     <a class="btn btn-ghost hover:text-gray-500 text-base font-normal" id="98 Acres" href="/98 Acres/">98 Acres</a>
     <a class="btn btn-ghost hover:text-gray-500 text-base font-normal" id="sports" href="/Sports/">Sports and Games</a>
-    <a class="btn btn-ghost hover:text-gray-500 text-base font-normal" id="publications" href="/publications/">Publications</a>
+    <a class="btn btn-ghost hover:text-gray-500 text-base font-normal" id="publications" href="/magazine/">Kalpa Editions</a>
     <a class="btn btn-ghost hover:text-gray-500 text-base font-normal" id="arts" href="/arts/">Arts and Culture</a>
     <a href="/contact" class="btn btn-ghost hover:text-gray-500 text-base font-normal">Contact</a></li>
   
