Fix horizontal bar bug

--- a/src/components/MenuElement.astro
+++ b/src/components/MenuElement.astro
@@ -78,20 +78,19 @@
 </div>
 
 <!-- Desktop Menu -->
-<div class="menu menu-horizontal px-8 hidden md:flex justify-evenly items-center text-base bg-base-100 p-4 gap-x-6 w-full bg-purple-200">
-  
-    <a href="/" class="btn btn-ghost hover:text-gray-500 text-base font-normal">Home</a>
-    <a href="/aboutus" class="btn btn-ghost btn btn-ghost hover:text-gray-500 text-base font-normal text-base font-normal">About us</a>
-    <a href="/joinus" class="btn btn-ghost btn btn-ghost hover:text-gray-500 text-base font-normal text-base font-normal">Volunteering</a>
-    <a class="btn btn-ghost hover:text-gray-500 text-base font-normal" id = "posts" href="/posts/"> All Articles</a>
-    <a class="btn btn-ghost hover:text-gray-500 text-base font-normal" id="opeds" href="/opeds/">Op-Eds</a>
-    <a class="btn btn-ghost hover:text-gray-500 text-base font-normal" id="98 Acres" href="/98 Acres/">98 Acres</a>
-    <a class="btn btn-ghost hover:text-gray-500 text-base font-normal" id="sports" href="/Sports/">Sports and Games</a>
-    <a class="btn btn-ghost hover:text-gray-500 text-base font-normal" id="publications" href="/magazine/">Kalpa Editions</a>
-    <a class="btn btn-ghost hover:text-gray-500 text-base font-normal" id="arts" href="/arts/">Arts and Culture</a>
-    <a href="/contact" class="btn btn-ghost hover:text-gray-500 text-base font-normal">Contact</a></li>
-  
+<div class="menu menu-horizontal px-4 hidden md:flex justify-evenly items-center text-sm bg-base-100 p-2 gap-x-4 w-full bg-purple-200">
+  <a href="/" class="btn btn-ghost hover:text-gray-500 font-normal">Home</a>
+  <a href="/aboutus" class="btn btn-ghost hover:text-gray-500 font-normal">About us</a>
+  <a href="/joinus" class="btn btn-ghost hover:text-gray-500 font-normal">Volunteering</a>
+  <a href="/posts/" class="btn btn-ghost hover:text-gray-500 font-normal">All Articles</a>
+  <a href="/opeds/" class="btn btn-ghost hover:text-gray-500 font-normal">Op-Eds</a>
+  <a href="/98 Acres/" class="btn btn-ghost hover:text-gray-500 font-normal">98 Acres</a>
+  <a href="/Sports/" class="btn btn-ghost hover:text-gray-500 font-normal">Sports and Games</a>
+  <a href="/magazine/" class="btn btn-ghost hover:text-gray-500 font-normal">Kalpa Editions</a>
+  <a href="/arts/" class="btn btn-ghost hover:text-gray-500 font-normal">Arts and Culture</a>
+  <a href="/contact" class="btn btn-ghost hover:text-gray-500 font-normal">Contact</a>
 </div>
+
 
 <!-- JavaScript for Mobile Menu Toggle -->
 <script>
