--- a/src/components/HorizontalCard.astro
+++ b/src/components/HorizontalCard.astro
@@ -5,7 +5,6 @@ const tag_url = url.split("/").slice(0, -1).join("/") + "/tag";
 const refer = title.replace(/^\s+|\s+$/gm,'');
 const authorString = authors.toString().split(",").join(", ");
 const dateTimeFormatter = new Intl.DateTimeFormat("en-US",{dateStyle: 'long'})
-console.log(pubDate);
 var neededDate = "";
 if (pubDate != null) {
    neededDate = dateTimeFormatter.format(new Date(pubDate));
@@ -13,7 +12,7 @@ if (pubDate != null) {
 ---
 
 <div
-  class="rounded-lg bg-base-100 hover:shadow-xl transition ease-in-out hover:scale-[102%]"
+  class="rounded-lg bg-base-100 hover:shadow-xl w-full transition ease-in-out hover:scale-[102%]"
 >
   <a href={url} target={target}>
     <div class="hero-content flex-col md:flex-row">
@@ -36,12 +35,15 @@ if (pubDate != null) {
           <span style="text-align:left;">
             {title}
           </span>
-          <span style="text-align: right; color:gray; font-size: medium;">
+          <span class="hidden md:block text-right text-gray-500 text-base ">
             {neededDate}  
           </span>
-          {badge && <div class="badge badge-secondary mx-2">{badge}</div>}
+          {badge && <div class="badge badge-secondary mx-2 hidden md:block">{badge}</div>}
         </h1>
-        <p class="prose py-1 text-1xl" transition:name={`${refer} desc`}>{desc}</p>
+        <span class="md:hidden text-left text-gray-500 text-base ">
+            {neededDate} 
+        </span>
+        <p class="prose py-1 text-1xl font-normal" transition:name={`${refer} desc`}>{desc}</p>
         {/*<footer>
           <hr style="border:none; border-top: 3px dashed gray "> <br>
           Authors : {authorString}
