--- a/src/components/MenuElement.astro
+++ b/src/components/MenuElement.astro
@@ -52,9 +52,9 @@
   <a href="/contact" class="btn btn-ghost hover:text-gray-500 text-base font-normal">Contact</a>
 </div> -->
 
-<nav id="mobile-menu" class="hidden h-dvh fixed inset-0 z-[9909] flex flex-col items-center justify-center bg-black bg-opacity-95 text-white space-y-8 text-xl transition-all duration-300 h-100% overflow-auto">
+<nav id="mobile-menu" class="hidden h-dvh fixed inset-0 z-[9909] flex flex-col items-center justify-center bg-white bg-opacity-98 text-black space-y-8 text-xl transition-all duration-300 h-100% overflow-auto">
   <!-- Close Button -->
-  <button id="menu-close" class="absolute top-4 right-4 text-white text-4xl p-3">✕</button>
+  <button id="menu-close" class="absolute top-4 right-4 text-black text-4xl p-3">✕</button>
   
   <!-- Menu Links -->
   <a href="/" class="btn btn-ghost hover:text-gray-500 text-base font-normal">Home</a>
@@ -65,6 +65,7 @@
     <a class="btn btn-ghost hover:text-gray-500 text-base font-normal" id="98 Acres" href="/98 Acres/">98 Acres</a>
     <a class="btn btn-ghost hover:text-gray-500 text-base font-normal" id="sports" href="/Sports/">Sports and Games</a>
     <a class="btn btn-ghost hover:text-gray-500 text-base font-normal" id="publications" href="/magazine/">Kalpa Editions</a>
+    <a class="btn btn-ghost hover:text-gray-500 text-base font-normal" id="sentience" href="/sentience/">Sentience</a>
     <a class="btn btn-ghost hover:text-gray-500 text-base font-normal" id="arts" href="/arts/">Arts and Culture</a>
     <a href="/contact" class="btn btn-ghost hover:text-gray-500 text-base font-normal">Contact</a></li>
 </nav>
@@ -87,6 +88,7 @@
   <a href="/98 Acres/" class="btn btn-ghost hover:text-gray-500 font-normal">98 Acres</a>
   <a href="/Sports/" class="btn btn-ghost hover:text-gray-500 font-normal">Sports and Games</a>
   <a href="/magazine/" class="btn btn-ghost hover:text-gray-500 font-normal">Kalpa Editions</a>
+  <a href="/sentience/" class="btn btn-ghost hover:text-gray-500 font-normal">Sentience</a>
   <a href="/arts/" class="btn btn-ghost hover:text-gray-500 font-normal">Arts and Culture</a>
   <a href="/contact" class="btn btn-ghost hover:text-gray-500 font-normal">Contact</a>
 </div>
